[2108] Improve actor creation tool
Bug: https://github.com/eclipse-syson/syson/issues/2108
Signed-off-by: Guillaume Coutable <guillaume.coutable@obeo.fr>